KTp/wallet-interface.cpp
@@ -25,8 +25,10 @@
 #include <KGlobal>
 
 
-class KTp::WalletInterfacePrivate
+class KTp::WalletInterfacePrivate : public QObject
 {
+    Q_OBJECT
+
 public:
     WalletInterfacePrivate();
     void ensureWalletIsReady();
@@ -34,6 +36,11 @@ public:
     QScopedPointer<KWallet::Wallet> wallet;
     static const QLatin1String folderName;
     static const QLatin1String mapsPrefix;
+
+    bool isOpening;
+
+private Q_SLOTS:
+    void onWalletOpened(bool success);
 };
 
 using KTp::WalletInterface;
@@ -46,15 +53,22 @@ void WalletInterfacePrivate::ensureWalletIsReady()
 {
     // If wallet was force-closed since last WalletInterface::openWallet(),
     // try to reopen it.
-    if (wallet && !wallet->isOpen()) {
-	wallet.reset(KWallet::Wallet::openWallet(KWallet::Wallet::NetworkWallet(), 0, KWallet::Wallet::Asynchronous));
+    if (!wallet || !wallet->isOpen()) {
+        // If the wallet is not already being opened, we try to open it
+        if (!isOpening) {
+            isOpening = true;
+            wallet.reset(KWallet::Wallet::openWallet(KWallet::Wallet::NetworkWallet(), 0, KWallet::Wallet::Asynchronous));
+            connect(wallet.data(), SIGNAL(walletOpened(bool)), SLOT(onWalletOpened(bool)));
+        }
     }
 }
 
 
 WalletInterfacePrivate::WalletInterfacePrivate() :
-    wallet(KWallet::Wallet::openWallet(KWallet::Wallet::NetworkWallet(), 0, KWallet::Wallet::Asynchronous))
+    wallet(NULL),
+    isOpening(false)
 {
+    ensureWalletIsReady();
 }
 
 KTp::PendingWallet* WalletInterface::openWallet()
@@ -65,9 +79,19 @@ KTp::PendingWallet* WalletInterface::openWallet()
     return new PendingWallet(s_instance);
 }
 
+void WalletInterfacePrivate::onWalletOpened(bool success)
+{
+    if (!success) {
+        kWarning() << "Couldn't open wallet";
+    }
+
+    disconnect(wallet.data(), SIGNAL(walletOpened(bool)), this, SLOT(onWalletOpened(bool)));
+    isOpening = false;
+}
+
 
 WalletInterface::WalletInterface():
-    d (new WalletInterfacePrivate)
+    d(new WalletInterfacePrivate)
 {
 }
 
@@ -268,4 +292,4 @@ KWallet::Wallet *WalletInterface::wallet() const
     return d->wallet.data();
 }
 
-
+#include "wallet-interface.moc"
